--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastapi-lib"
-version = "25.6.1"
+version = "25.6.2"
 description = "A collection of utilities for FastAPI and SQLModel applications."
 readme = "README.md"
 requires-python = ">=3.12"
@@ -43,4 +43,4 @@ testpaths = ["tests"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["fastapi_lib"]
+include = ["fastapi_lib", "fastapi_lib.*"]
